# request-nest

./: .agentic-repo-template.json  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml
.claude/rules/: commit.md  security.md
.claude/rules/frontend/: style.md  testing.md
.claude/rules/python/: style.md  testing.md
.claude/rules/service/: api-design.md  database.md  integrations.md
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 0392268b76f8_create_bins_and_events_tables.py  3354f5f32be1_initial_baseline.py
docs/: product-vision.md
docs/prds/: 01-mvp-steel-thread.md
src/request_nest/: __init__.py  auth.py  cli.py  config.py  db.py  errors.py  main.py
src/request_nest/controllers/: __init__.py
src/request_nest/controllers/v1/: __init__.py  bin_controller.py  event_controller.py  ingest_controller.py
src/request_nest/domain/: __init__.py  bin.py  event.py
src/request_nest/dtos/: __init__.py
src/request_nest/dtos/v1/: __init__.py  bin_dto.py  event_dto.py  ingest_dto.py
src/request_nest/observability/: __init__.py  logging.py
src/request_nest/repositories/: __init__.py  bin_repository.py  event_repository.py  protocols.py
src/request_nest/routes/: __init__.py
src/request_nest/routes/v1/: __init__.py  bins.py  events.py  health.py  ingest.py  router.py
src/request_nest/routes/web/: __init__.py  index.py
src/request_nest/services/: __init__.py  bin_service.py  event_service.py
src/request_nest/web/frontend/: CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
src/request_nest/web/frontend/src/: App.tsx  index.css
src/request_nest/web/frontend/src/api/: client.ts  fakeClient.test.ts  fakeClient.ts  index.ts  realClient.ts
src/request_nest/web/frontend/src/components/: AuthPrompt.test.tsx  AuthPrompt.tsx  BinsTable.test.tsx  BinsTable.tsx  (+5 more)
src/request_nest/web/templates/: base.html
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  test_bin_detail_workflows.py  test_bins_workflows.py  test_event_detail_workflows.py
tests/fakes/: __init__.py  fake_bin_repository.py  fake_event_repository.py
tests/integration/: __init__.py  test_health.py
tests/integration/repositories/: conftest.py  test_bin_repository.py  test_event_repository.py
tests/integration/routes/: __init__.py  test_bins.py  test_events.py  test_ingest.py
tests/performance/: __init__.py  test_ingest_latency.py
tests/unit/: __init__.py  conftest.py
tests/unit/controllers/: test_ingest_controller.py
tests/unit/domain/: test_bin.py  test_event.py
tests/unit/services/: test_bin_service.py  test_event_service.py  test_ingest.py
(+22 files in other folders)
